--- a/styles.css
+++ b/styles.css
@@ -22,48 +22,57 @@ img {
     box-shadow: 0 15px 25px rgba(50, 50, 50, 0.15);
     border-radius: 10px;
     width: 10vw;
-    height: 25vh;
+    height: 15vw;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    row-gap: 5%;
+    justify-content: space-around;
     background-color: rgb(233, 204, 39);
 }
 
 .board {
-    width: 83.5vh;
-    height: 83.5vh;
+    width: 90vh;
+    height: 90vh;
     background: url(img/board.jpg);
     background-repeat: no-repeat;
+    background-size: contain;
     display: grid;
     grid-template-rows: repeat(10, 1fr);
     grid-template-columns: repeat(10, 1fr)
 }
 
+.box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .cir {
     width: 100%;
     height: 100%;
-    transform: scale(0.7);
+    transform: scale(0.6);
     border-radius: 100%;
     opacity: 90%;
 }
 
 .dice {
-    max-width: 60%;
-    margin: auto;
+    width: 60%;
+}
+
+.btn-box {
+    width: 80%;
 }
 
 .btn {
     background-color: #e92e3d;
     border: none;
     color: #ffffff;
-    padding: 10% 0;
-    width: 120px;
+    padding: 8% 2%;
+    margin: 0;
+    width: 100%;
     letter-spacing: 1px;
     border-radius: 5px;
     cursor: pointer;
-    justify-self: center;
 }
 
 @keyframes shake {
@@ -86,6 +95,8 @@ img {
 
 .text1 {
     color: black;
+    width: 100%;
+    text-align: center;
 }
 
 .text2 {
@@ -94,4 +105,27 @@ img {
 
 #frame2 {
     background-color: rgb(55, 55, 226);
+}
+
+@media only screen and (max-width : 1175px) {
+    .game-frame {
+        column-gap: 5%;
+    }
+}
+
+@media only screen and (max-width : 1050px) {
+    .dice-frame {
+        width: 12vw;
+        height: 18vw;
+    }
+}
+
+@media only screen and (max-width : 850px) {
+
+    .text1,
+    .text2 {
+        display: none;
+    }
+
+    .dice-frame{justify-content: center;}
 }
