--- a/CircleNinja-Pranav/styles.css
+++ b/CircleNinja-Pranav/styles.css
@@ -1,8 +1,10 @@
 .game-canvas{
-    overflow: hidden;
     height: 200%;
 }
 
+body{
+    background-image: url("./assets/george-pagan-iii-WwCTFNpZx8g-unsplash.jpg");
+}
 
 [class^="cube-"]{
     width: 5rem;
@@ -11,7 +13,7 @@
     top : 60rem;
     /* border-radius: 100%; */
     background-color: rebeccapurple;
-    animation: bring_into_view 3s, rotate 8s;
+    animation: bring_into_view 3s;
 }
 
 .game-area{
@@ -51,7 +53,6 @@
 
 .score{
     display: inline-block;
-    
 }
 
 /* .dead{
@@ -65,15 +66,17 @@
 
 .head{
     text-align: center;
-    font-size: 5rem;
-    font-family: 'Dancing Script', cursive;
+    font-size: 4rem;
+    letter-spacing: 0.15ch;
+    font-family: 'Diphylleia', serif;
+    color:honeydew;
+    margin-top: 16.5rem;
 }
 
 .start-game{
     text-align: center;
     font-size: 20px;
     background-color: black;
-    border-radius: 8px;
     color: white;
     display: flex;
     flex-direction: column;
@@ -99,7 +102,7 @@
     text-align: center;
     margin-top: 3rem;
     font-size: 1rem;
-    
+    color: white;
 }
 
 .wrapper{
@@ -119,11 +122,15 @@
     position: absolute;
     top: 0;
     left: auto;
+    font-size: 3rem;
+    color: burlywood;
 }
 
 #canvas{
     overflow: hidden;
     z-index: 1;
+    background-image: url("assets/1758800.jpg");
+    
 }
 
 .no-select {
@@ -131,3 +138,23 @@
     -moz-user-select: none; 
     -webkit-user-select: none; 
     -ms-user-select: none; }
+
+.game-end{
+    margin-top: 20rem;
+    margin-left: 35rem;
+    color : honeydew;
+    font-size: 2rem;
+}
+
+.home{
+    background-color: aquamarine;
+    padding: 1rem;
+    color: burlywood;
+}
+
+.start-game-again{
+    background-color: aqua;
+    padding: 1rem;
+    color : white;
+
+}
