--- a/CircleNinja-Pranav/styles.css
+++ b/CircleNinja-Pranav/styles.css
@@ -60,7 +60,8 @@ body{
 } */
 
 .cut{
-    background-color: red;
+    /* background-color: red; */
+    display: none;
 }
 
 
@@ -122,7 +123,8 @@ body{
     position: absolute;
     top: 0;
     left: auto;
-    font-size: 3rem;
+    font-size: 1rem;
+    
     color: burlywood;
 }
 
